// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OverflowMenu > basic 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-overflow-menu"
  >
    <div>
      BASIC
    </div>
  </div>
</DocumentFragment>
`;

exports[`OverflowMenu > lg 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-overflow-menu"
  />
</DocumentFragment>
`;

exports[`OverflowMenu > xl 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-overflow-menu"
  />
</DocumentFragment>
`;
